--- a/index.html
+++ b/index.html
@@ -15,17 +15,20 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>replication.io</h1>
-        <p>multi-master replication. defined.</p>
-
-        <p class="view"><a href="https://github.com/cloudant/replication.io">View the Project on GitHub <small>cloudant/replication.io</small></a></p>
-
-
-        <ul>
-          <li><a href="https://github.com/cloudant/replication.io/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/cloudant/replication.io/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/cloudant/replication.io">View On <strong>GitHub</strong></a></li>
-        </ul>
+        <div style="text-align:center">
+          <h1>replication.io</h1>
+          <p>multi-master replication. defined.</p>
+        </div>
+        <nav>
+          <a href="#">The Spec</a>
+          <strong style="margin-left:1em">Replicating Databases</strong>
+          <a href="#">Apache CouchDB</a>
+          <a href="#">Cloudant</a>
+          <a href="#">PouchDB</a>
+          <a href="#">TouchDB-iOS</a>
+          <a href="#">TouchDB-Android</a>
+          <a href="#">Couchbase Lite</a>
+        </nav>
       </header>
       <section>
         <h3>
@@ -52,11 +55,11 @@
 <a name="collaborate-and-contribute" class="anchor" href="#collaborate-and-contribute"><span class="octicon octicon-link"></span></a>Collaborate and Contribute</h3>
 
 <p>We encourage anyone with an interest and/or implementation in "CouchDB-style replication" to join this documentation and testing effort. We hope to build community around our shared strength regardless of our implementation or distribution channel choices.</p>
-      </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/cloudant">cloudant</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p>This project is maintained by <a href="http://cloudant.com/">Cloudant</a>.
+        <small>Hosted on GitHub Pages.</small></p>
       </footer>
+      </section>
     </div>
     <script src="javascripts/scale.fix.js"></script>
     
