--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>replication.io by cloudant</title>
+    <title>replication.io</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -20,7 +20,7 @@
           <p>multi-master replication. defined.</p>
         </div>
         <nav>
-          <a href="#">The Spec</a>
+          <a href="spec.html">The Spec</a>
           <strong style="margin-left:1em">Replicating Databases</strong>
           <a href="#">Apache CouchDB</a>
           <a href="#">Cloudant</a>
