--- a/spec.html
+++ b/spec.html
@@ -20,14 +20,8 @@
           <p>multi-master replication. defined.</p>
         </div>
         <nav>
-          <a href="spec.html">The Spec</a>
-          <strong style="margin-left:1em">Replicating Databases</strong>
-          <a href="#">Apache CouchDB</a>
-          <a href="#">Cloudant</a>
-          <a href="#">PouchDB</a>
-          <a href="#">TouchDB-iOS</a>
-          <a href="#">TouchDB-Android</a>
-          <a href="#">Couchbase Lite</a>
+          <a href="/spec.html">Specification</a>
+          <a href="/databases/">Databases</a>
         </nav>
       </header>
       <section>
