--- a/databases/index.html
+++ b/databases/index.html
@@ -16,12 +16,12 @@
     <div class="wrapper">
       <header>
         <div style="text-align:center">
-          <h1>replication.io</h1>
+          <h1><a href="/">replication.io</a></h1>
           <p>multi-master replication. defined.</p>
         </div>
         <nav>
           <a href="/spec.html">Specification</a>
-          <a href="/databases/">Databases</a>
+          <a href="/databases/" class="active">Databases</a>
         </nav>
       </header>
       <section>
