--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <div style="text-align:center">
-          <h1>replication.io</h1>
+          <h1><a href="/">replication.io</a></h1>
           <p>multi-master replication. defined.</p>
         </div>
         <nav>
