--- a/spec.html
+++ b/spec.html
@@ -16,11 +16,11 @@
     <div class="wrapper">
       <header>
         <div style="text-align:center">
-          <h1>replication.io</h1>
+          <h1><a href="/">replication.io</a></h1>
           <p>multi-master replication. defined.</p>
         </div>
         <nav>
-          <a href="/spec.html">Specification</a>
+          <a href="/spec.html" class="active">Specification</a>
           <a href="/databases/">Databases</a>
         </nav>
       </header>
