--- a/_docs/index/html.html
+++ b/_docs/index/html.html
@@ -1,32 +1,4 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>replication.io</title>
-
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <div style="text-align:center">
-          <h1><a href="/">replication.io</a></h1>
-          <p>multi-master replication. defined.</p>
-        </div>
-        <nav>
-          <a href="/spec.html">Specification</a>
-          <a href="/databases/">Databases</a>
-        </nav>
-      </header>
-      <section>
-        <h3>
-<a name="what-is-replicationio" class="anchor" href="#what-is-replicationio"><span class="octicon octicon-link"></span></a>What is replication.io</h3>
+<h3><a name="what-is-replicationio" class="anchor" href="#what-is-replicationio"><span class="octicon octicon-link"></span></a>What is replication.io</h3>
 
 <p><a href="http://replication.io/">replication.io</a> is intended to be a community center for databases and services that support "Apache CouchDB-style replication." We are working on building out the definition/spec, testing compatibility, and exploring what's next for multi-master, MVCC-based replication.</p>
 
@@ -49,13 +21,3 @@
 <a name="collaborate-and-contribute" class="anchor" href="#collaborate-and-contribute"><span class="octicon octicon-link"></span></a>Collaborate and Contribute</h3>
 
 <p>We encourage anyone with an interest and/or implementation in "CouchDB-style replication" to join this documentation and testing effort. We hope to build community around our shared strength regardless of our implementation or distribution channel choices.</p>
-      <footer>
-        <p>This project is maintained by <a href="http://cloudant.com/">Cloudant</a>.
-        <small>Hosted on GitHub Pages.</small></p>
-      </footer>
-      </section>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
-  </body>
-</html>
