--- a/_docs/index/html.html
+++ b/_docs/index/html.html
@@ -1,23 +1,17 @@
-<h3><a name="what-is-replicationio" class="anchor" href="#what-is-replicationio"><span class="octicon octicon-link"></span></a>What is replication.io</h3>
+<p><strong>replication.io</strong> is a community center for databases and services that support Apache CouchDB-style replication. We are working to expand the definition and specification to encompass the growing family of databases that support HTTP-based, multi-master replication.</p>
 
-<p><a href="http://replication.io/">replication.io</a> is intended to be a community center for databases and services that support "Apache CouchDB-style replication." We are working on building out the definition/spec, testing compatibility, and exploring what's next for multi-master, MVCC-based replication.</p>
+<h3 id="objective">Objective</h3>
 
-<h3>
-<a name="why-this-is-needed" class="anchor" href="#why-this-is-needed"><span class="octicon octicon-link"></span></a>Why this is needed</h3>
+<p><a href="http://couchdb.apache.org/">Apache CouchDB</a> was created with multi-master replication built into its foundation. The <a href="databases">list of databases</a> supporting this multi-master replication style has grown over the past half decade.</p>
 
-<p><a href="http://couchdb.apache.org/">Apache CouchDB</a> was created with multi-master replication built into its foundation. The list of databases supporting this multi-master replication style continues to grow. The goal of this project and web site is to combine our communities around our shared strength.</p>
+<p class="well"><em>The goal of this project is to combine our communities around our shared strength.</em></p>
 
-<h3>
-<a name="who-this-is-for" class="anchor" href="#who-this-is-for"><span class="octicon octicon-link"></span></a>Who this is for</h3>
+<h3 id="beyond-databases">Beyond Databases?</h3>
 
-<p>Users. Freeing user data to move with the user--among all the various types of devices they use now and will use in the future--is key to going "beyond the cloud" and enabling an Internet of Things that is sustainable and resilient.</p>
+<p>The replication format and process is a simple exchange of document and revision identifiers. It has been implemented in single node, multi node, mobile, and even web browser-based databases. It can go even farther. Anything that can support a by-sequence index and tracks changes to its content (be it a database, a file system, web service, or perhaps even hardware and sensors), could support multi-master replication.</p>
 
-<h3>
-<a name="beyond-databases" class="anchor" href="#beyond-databases"><span class="octicon octicon-link"></span></a>Beyond Databases?</h3>
+<p>Initial work has been done to define the originating implementation done in Apache CouchDB (see <a href="spec">Specification</a>). Work is underway to provide a specification as well as testing environments that encompasses this family of databases, and provides a framework for future implementors to use in testing their databases, filesystems, services, or hardware.</p>
 
-<p>The replication format and process is a simple exchange of document and revision identifiers. It has been implemented in single node, multi node, mobile, and even web browser-based databases. It can go even farther. Anything that can support a by-sequence index and tracks changes to all the contents of something (be it a database, a file system, web service, or even hardware-monitored storage), could support multi-master replication.</p>
+<h3 id="collaborate-and-contribute"><a href="http://github.com/cloudant-labs/replication.io/">Collaborate and Contribute</a></h3>
 
-<h3>
-<a name="collaborate-and-contribute" class="anchor" href="#collaborate-and-contribute"><span class="octicon octicon-link"></span></a>Collaborate and Contribute</h3>
-
-<p>We encourage anyone with an interest and/or implementation in "CouchDB-style replication" to join this documentation and testing effort. We hope to build community around our shared strength regardless of our implementation or distribution channel choices.</p>
+<p>We encourage anyone with an interest and/or implementation in multi-master replication to join this documentation and testing effort.</p>
