rephrased Cloudant info
The BigCouch parenthetical was confusing.

--- a/_docs/databases/html.html
+++ b/_docs/databases/html.html
@@ -6,12 +6,12 @@
   <dd>The "grandfather" of them all, Apache CouchDB implemented the originating
     HTTP-based replication spec, is written in Erlang, and has helped spawn this
     list of various implementions.</dd>
-  <dt><a href="http://cloudant.com/">Cloudant (BigCouch)</a></dt>
+  <dt><a href="http://cloudant.com/">Cloudant</a></dt>
   <dd>Cloudant offers a CouchDB compatible Database-as-a-Service product
-  built on BigCouch which adds Dynamo-style, multi-node partitioning to
-  the Apache CouchDB core. The BigCouch code-base was donated to the
-  Apache Foundation and is being merged into the core Apache CouchDB
-  project.
+  which adds Dynamo-style, multi-node partitioning to the Apache CouchDB
+  core. Cloudant is donating this sharding code-base (aka
+  [BigCouch](http://bigcouch.cloudant.com/)) to the Apache Foundation
+  and it is intended to be the basis of a future Apache CouchDB.
   </dd>
   <dt><a href="http://www.couchbase.com/communities/couchbase-lite">Couchbase Lite (TouchDB)</a></dt>
   <dd>Couchbase Lite (formerly TouchDB) is a lightweight Apache
