HTML...not Markdown
I keep forgetting.

--- a/_docs/databases/html.html
+++ b/_docs/databases/html.html
@@ -10,7 +10,7 @@
   <dd>Cloudant offers a CouchDB compatible Database-as-a-Service product
   which adds Dynamo-style, multi-node partitioning to the Apache CouchDB
   core. Cloudant is donating this sharding code-base (aka
-  [BigCouch](http://bigcouch.cloudant.com/)) to the Apache Foundation
+  <a href="http://bigcouch.cloudant.com/">BigCouch</a>) to the Apache Foundation
   and it is intended to be the basis of a future Apache CouchDB.
   </dd>
   <dt><a href="http://www.couchbase.com/communities/couchbase-lite">Couchbase Lite (TouchDB)</a></dt>
@@ -25,4 +25,5 @@
     <dt><a href="https://github.com/nick-thompson/pouchdb-server">PouchDB Server</a></dt>
     <dd>PouchDB running via node.js with the same HTTP API as Apache CouchDB.</dd>
   </dd>
+  
 </dl>
