added more replicating endpoints
...its a growing list.

--- a/_docs/databases/html.html
+++ b/_docs/databases/html.html
@@ -25,5 +25,12 @@
     <dt><a href="https://github.com/nick-thompson/pouchdb-server">PouchDB Server</a></dt>
     <dd>PouchDB running via node.js with the same HTTP API as Apache CouchDB.</dd>
   </dd>
-  
+  <dt>Other earlier stage replicating endpoints:</dt>
+  <dd>
+    <dt><a href="https://github.com/mikeal/couchup">couchup</a></dt>
+    <dt><a href="https://github.com/dominictarr/level-couch-sync">level-couch-sync</a></dt>
+    <dt><a href="https://github.com/jo/roy-replicator">roy-replicator</a></dt>
+    <dt><a href="https://github.com/kxepal/replipy">replipy</a> (a testing implementation)</dt>
+    <dt><a href="https://github.com/mikeal/replicate">replicate</a></dt>
+  </dd>
 </dl>
