tweaked CouchDB description a bit

--- a/_docs/databases/html.html
+++ b/_docs/databases/html.html
@@ -3,9 +3,9 @@
   of databases all with various strengths and locations within an application stack.</p>
 <dl>
   <dt><a href="http://couchdb.apache.org/">Apache CouchDB</a></dt>
-  <dd>The "grandfather" of them all, Apache CouchDB implemented the originating
-    HTTP-based replication spec, is written in Erlang, and has helped spawn this
-    list of various implementions.</dd>
+  <dd>Apache CouchDB implemented the originating HTTP-based, multi-master
+  replication pattern. It is written in Erlang, and has helped spawn this
+  list of (nearly) compatible implementions.</dd>
   <dt><a href="http://cloudant.com/">Cloudant</a></dt>
   <dd>Cloudant offers a CouchDB compatible Database-as-a-Service product
   which adds Dynamo-style, multi-node partitioning to the Apache CouchDB
