Add a note about the replication web service that's being built for Drupal.

--- a/_docs/databases/html.html
+++ b/_docs/databases/html.html
@@ -32,5 +32,6 @@
     <dt><a href="https://github.com/jo/roy-replicator">roy-replicator</a></dt>
     <dt><a href="https://github.com/kxepal/replipy">replipy</a> (a testing implementation)</dt>
     <dt><a href="https://github.com/mikeal/replicate">replicate</a></dt>
+    <dt><a href="https://www.drupal.org/project/replication">Replication Web Service for Drupal</a></dt>
   </dd>
 </dl>
