Adding RipcordSoftware's AvanceDB

--- a/_docs/databases/html.html
+++ b/_docs/databases/html.html
@@ -25,6 +25,8 @@
     <dt><a href="https://github.com/nick-thompson/pouchdb-server">PouchDB Server</a></dt>
     <dd>PouchDB running via node.js with the same HTTP API as Apache CouchDB.</dd>
   </dd>
+  <dt><a href="https://github.com/RipcordSoftware/AvanceDB">AvanceDB</a></dt>
+  <dd>AvanceDB is C++ in-memory database based on the CouchDB REST API and containing the CouchDB Futon and Fauxton web sites.</dd>
   <dt>Other earlier stage replicating endpoints:</dt>
   <dd>
     <dt><a href="https://github.com/mikeal/couchup">couchup</a></dt>
