--- a/_docs/spec/html.html
+++ b/_docs/spec/html.html
@@ -83,7 +83,7 @@ the changes.</p>
 feed</strong> and send them to the target databases on the
 <cite>/&lt;target&gt;/_revs_diffs</cite> URL. The result will contain the list of
 revisions <strong>NOT</strong> in the Target.</li>
-<li>GET each revisions from the source Database by calling the URL
+<li>GET each revision from the source Database by calling the URL
 <cite>/&lt;source&gt;/&lt;docid&gt;?revs=true&amp;open_revs`=&lt;revision&gt;</cite> . This
 will get the document with teh parent revisions. Also don't forget to
 get attachments that aren't already stored at the target. As an
