Added implementation: RipcordSoftware's AvanceDB
C++ implementation, memory-only

--- a/_docs/databases/html.html
+++ b/_docs/databases/html.html
@@ -27,6 +27,7 @@
   </dd>
   <dt>Other earlier stage replicating endpoints:</dt>
   <dd>
+    <dt><a href="https://github.com/RipcordSoftware/AvanceDB">AvanceDB</a> (c++ implementation, memory-only)</dt>
     <dt><a href="https://github.com/mikeal/couchup">couchup</a></dt>
     <dt><a href="https://github.com/dominictarr/level-couch-sync">level-couch-sync</a></dt>
     <dt><a href="https://github.com/jo/roy-replicator">roy-replicator</a></dt>
